# Fanuc_RMI_API

./: .gitignore  CHANGELOG.md  CONFIGURATION_FIX_SUMMARY.md  Cargo.toml  JOG_FUNCTIONALITY_FIX.md  KINEMATICS_UPDATE_SUMMARY.md  LICENSE  RELEASE_NOTES_v0.2.0_WEB_APP.md  RELEASE_NOTES_v0.3.0.md  ROBOT_CONFIGURATION.md  SEQUENCE_ID_FIX_SUMMARY.md  SPEED_TYPE_MIGRATION.md  START_HERE.md  b83525.txt  cargo.toml  m20id.txt  readme.md
.antigravity/: final_implementation_report.md  research_plan.md
docs/: COORDINATE_FRAMES_GUIDE.md  CORRELATION_ID_IMPLEMENTATION_SUMMARY.md  (+22 more)
fanuc_rmi/: Cargo.toml
fanuc_rmi/src/: extract.rs  lib.rs  transforms.rs
fanuc_rmi/src/commands/: frc_abort.rs  frc_continue.rs  frc_getstatus.rs  frc_getuframeutool.rs  frc_initialize.rs  frc_pause.rs  frc_readain.rs  frc_readcartesianposition.rs  frc_readdin.rs  frc_readerror.rs  frc_readgin.rs  frc_readjointangles.rs  frc_readpositionregister.rs  frc_readtcpspeed.rs  frc_readuframedata.rs  frc_readutooldata.rs  frc_reset.rs  frc_setoveride.rs  frc_setuframeutool.rs  frc_unknown.rs  frc_writeaout.rs  frc_writedout.rs  frc_writegout.rs  frc_writepositionregister.rs  frc_writeuframedata.rs  frc_writeutooldata.rs  mod.rs
fanuc_rmi/src/drivers/: driver.rs  driver_config.rs  mod.rs  models.rs  motion.rs
fanuc_rmi/src/dto/: mod.rs
fanuc_rmi/src/errors/: error_codes.rs  frc_error.rs  mod.rs
fanuc_rmi/src/instructions/: frc_call.rs  frc_circularmotion.rs  frc_circularrelative.rs  frc_jointmotion.rs  frc_jointmotionjrep.rs  frc_jointrelative.rs  frc_jointrelativejrep.rs  frc_linearmotion.rs  frc_linearmotionjrep.rs  frc_linearrelative.rs  frc_linearrelativejrep.rs  frc_setpayload.rs  frc_setuframe.rs  frc_setutool.rs  frc_waitdin.rs  frc_waittime.rs  mod.rs
fanuc_rmi/src/packets/: command.rs  communication.rs  driver_command.rs  instruction.rs  mod.rs
fanuc_rmi/tests/: dto_roundtrip.rs  extract_inner_test.rs  json_format_validation.rs  position_precision_test.rs  program_pause_resume_test.rs  unknown_command_test.rs  utool_command_format_test.rs
fanuc_rmi_macros/: Cargo.toml
fanuc_rmi_macros/src/: lib.rs
sim/: Cargo.toml  KINEMATICS.md
sim/src/: kinematics.rs  lib.rs  main.rs  robot_config.rs
web_app/: Cargo.toml  README.md  build.sh  index.html
web_app/pkg/: web_app.js  web_app_bg.wasm
web_app/src/: hmi_broadcast.rs  lib.rs  main.rs  robot_models.rs  websocket.rs
web_app/src/components/: error_log.rs  hmi_popup.rs  jog_controls.rs  mod.rs  motion_log.rs  position_display.rs  robot_creation_wizard.rs  robot_status.rs  settings.rs  toast.rs
web_app/src/components/debug/: frame_reader.rs  mod.rs
web_app/src/components/hmi_widgets/: bar.rs  gauge.rs  io_button.rs  led_indicator.rs  mod.rs  multi_state.rs  numeric.rs  slider.rs
web_app/src/components/layout/: left_navbar.rs  main_workspace.rs  mod.rs  right_panel.rs  top_bar.rs
web_app/src/components/layout/workspace/: context.rs  mod.rs  settings.rs
web_app/src/components/layout/workspace/dashboard/: control.rs  hmi.rs  info.rs  mod.rs
web_app/src/components/layout/workspace/dashboard/control/: command_input.rs  command_log.rs  composer.rs  joint_jog.rs  load_modal.rs  mod.rs  program_display.rs  quick_commands.rs
web_app/src/components/layout/workspace/programs/: mod.rs  modals.rs
web_server/: Cargo.toml  README.md
web_server/src/: api_handler.rs  api_types.rs  database.rs  main.rs  program_executor.rs  program_parser.rs  session.rs
web_server/src/handlers/: configurations.rs  connection.rs  control.rs  execution.rs  frame_tool.rs  hmi.rs  io.rs  io_config.rs  mod.rs  programs.rs  robot_connections.rs  robot_control.rs  session.rs  settings.rs
web_server/static/: index.html
(+43 files in other folders)
