[package]
name = "fanuc_rmi"
version = "0.5.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] , optional = true}
serde = { version = "1.0", features = ["derive"] }
# bevy = { default-features = false, features = ["bevy_ecs"] }
serde_derive = "1.0"
serde_json = "1.0"
int-enum = "1.1.2"
tracing = "0.1.41"
fanuc_rmi_macros = { path = "../fanuc_rmi_macros" }


[features]
default=["driver", "logging"]
logging=[]
driver=["dep:tokio"]
DTO=[]

[dev-dependencies]
bincode = "1"
