[package]
name = "sim"
version = "0.1.0"
edition = "2021"

[lib]
name = "sim"
path = "src/lib.rs"

[[bin]]
name = "sim"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1.41"
nalgebra = "0.33"
fanuc_rmi = { path = "../fanuc_rmi" }
web_common = { path = "../web_common" }
