[package]
name = "web_app"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos-use = "0.16"
leptos_router = "0.8"
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["WebSocket", "MessageEvent", "ErrorEvent", "CloseEvent", "BinaryType"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
fanuc_rmi = { path = "../fanuc_rmi", default-features = false, features = ["DTO"] }
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

