[package]
name = "web_server"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "web_server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
fanuc_rmi = { path = "../fanuc_rmi", features = ["DTO", "driver","logging"] }
web_common = { path = "../web_common" }
tracing = "0.1"
tracing-subscriber = "0.3"
rusqlite = { version = "0.37.0", features = ["bundled"] }
csv = "1.4.0"
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
uuid = { version = "1", features = ["v4"] }

